Update installfullnode.sh